--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,18 +3,60 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: #3d64e6;
   color: #212121;
   line-height: 1.5;
 }
 
+.container {
+  background-color: #ffffff;
+  width: 80vw;
+  max-width: 37.5em;
+  padding: 3em 2.5em;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  border-radius: 0.62em;
+  box-shadow: 0 1.25em 1.8em rgba(8, 21, 65, 0.25);
+}
+
+.search-wrapper {
+  display: grid;
+  
+}
 #search-box {
-  font: inherit;
-  padding: 8px;
-  max-width: 320px;
-  margin-bottom: 16px;
+  font-size: 1em;
+  padding: 10 0.62em;
+  border: none;
+  border-bottom: 2px solid #3d64e6;
+  outline: none;
+  color: #222a43;
+}
+
+.country-header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.country-name {
+  display: inline-block;
+  margin: 0 0 0 20px;
+}
+
+.country-info {
+  margin-top: 20px;
+  border: 2px black ;
+}
+
+p {
+  margin: 20 0 10 0;
+}
+
+p > span {
+  font-weight: 800;
 }
