--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,22 +3,31 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #3d64e6;
+  background-color: #ffffff;
   color: #212121;
   line-height: 1.5;
 }
 
 .container {
-  background-color: #ffffff;
+  background-color: #f1f1f1;
   width: 80vw;
   max-width: 37.5em;
   padding: 3em 2.5em;
   position: absolute;
   transform: translate(-50%, -50%);
-  top: 50%;
+  top: 40%;
   left: 50%;
   border-radius: 0.62em;
   box-shadow: 0 1.25em 1.8em rgba(8, 21, 65, 0.25);
@@ -26,37 +35,67 @@ body {
 
 .search-wrapper {
   display: grid;
-  
 }
+
 #search-box {
   font-size: 1em;
   padding: 10 0.62em;
   border: none;
-  border-bottom: 2px solid #3d64e6;
+  border-radius: 0.62em;
+  border: 1px solid #222a43;;
   outline: none;
   color: #222a43;
+}
+
+.country-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.country-item {
+  display: flex;
+  margin: 15px 0;
+  align-items: center;
+}
+
+.country-item-img {
+  display: block;
+  margin-right: 30px;
+}
+
+.country-name-title {
+  margin: 0;
+  font-size: 22px;
 }
 
 .country-header {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  margin: 20 0 20 0;
 }
 
 .country-name {
-  display: inline-block;
-  margin: 0 0 0 20px;
+  display: flex;
+  align-items: center;
+  height: 75px;
+  margin: 0;
+  font-size: 30px;
+  font-weight: 700;
 }
 
-.country-info {
-  margin-top: 20px;
-  border: 2px black ;
+.country-img {
+  display: block;
+  margin-right: 15px;
 }
 
 p {
-  margin: 20 0 10 0;
+  margin: 0;
+  padding-left: 0;
+  font-size: 22px;
 }
 
-p > span {
-  font-weight: 800;
+p>span {
+  font-weight: 700;
 }
