--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -42,7 +42,8 @@ body {
   padding: 10 0.62em;
   border: none;
   border-radius: 0.62em;
-  border: 1px solid #222a43;;
+  border: 1px solid #222a43;
+  ;
   outline: none;
   color: #222a43;
 }
@@ -66,7 +67,7 @@ body {
 
 .country-name-title {
   margin: 0;
-  font-size: 22px;
+  font-size: 18px;
 }
 
 .country-header {
